--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,17 +3,17 @@
 # ----------------------------------
 # 1. Configuration du serveur
 # ----------------------------------
-# Le port est défini par la variable d'environnement 'PORT' de Render.
-# L'adresse 0.0.0.0 permet de lier le serveur à toutes les interfaces réseau disponibles.
+# Le port est dï¿½fini par la variable d'environnement 'PORT' de Render.
+# L'adresse 0.0.0.0 permet de lier le serveur ï¿½ toutes les interfaces rï¿½seau disponibles.
 server.port=${PORT:8080}
 server.address=0.0.0.0
 
 # ----------------------------------
-# 2. Configuration de la base de données PostgreSQL
+# 2. Configuration de la base de donnï¿½es PostgreSQL
 # ----------------------------------
-# Pour la production, il est recommandé d'utiliser des variables d'environnement pour les identifiants
-# (url, username, password) plutôt que de les coder en dur dans le fichier. Render gère cela.
-# Exemple avec des variables d'environnement (plus sécurisé) :
+# Pour la production, il est recommandï¿½ d'utiliser des variables d'environnement pour les identifiants
+# (url, username, password) plutï¿½t que de les coder en dur dans le fichier. Render gï¿½re cela.
+# Exemple avec des variables d'environnement (plus sï¿½curisï¿½) :
 # spring.datasource.url=${SPRING_DATASOURCE_URL}
 # spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 # spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
@@ -24,35 +24,35 @@ spring.datasource.username=hades_43lf_user
 spring.datasource.password=psPBr6yXwPuoZGUSIVxFY9pzGcYfDj4J
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Configuration SSL spécifique à Render pour éviter les erreurs de connexion.
+# Configuration SSL spï¿½cifique ï¿½ Render pour ï¿½viter les erreurs de connexion.
 spring.datasource.hikari.connection-init-sql=SELECT 1
 
 
 # 3. JPA / Hibernate
-# ATTENTION : 'update' est risqué en production !
-# Il est fortement recommandé d'utiliser 'none' ou 'validate' et de gérer les migrations
-# de base de données avec des outils comme Flyway ou Liquibase pour éviter les pertes de données.
+# ATTENTION : 'update' est risquï¿½ en production !
+# Il est fortement recommandï¿½ d'utiliser 'none' ou 'validate' et de gï¿½rer les migrations
+# de base de donnï¿½es avec des outils comme Flyway ou Liquibase pour ï¿½viter les pertes de donnï¿½es.
 spring.jpa.hibernate.ddl-auto=validate
 
-# Désactive le formatage SQL et l'affichage des requêtes pour des raisons de performance.
+# Dï¿½sactive le formatage SQL et l'affichage des requï¿½tes pour des raisons de performance.
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
 
-# Spécification du dialecte pour PostgreSQL.
+# Spï¿½cification du dialecte pour PostgreSQL.
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 
-# 4. JWT (Configuration sécurisée)
-# La clé secrète ne doit JAMAIS être codée en dur en production.
-# Elle doit être injectée via une variable d'environnement de votre hébergeur (Render).
+# 4. JWT (Configuration sï¿½curisï¿½e)
+# La clï¿½ secrï¿½te ne doit JAMAIS ï¿½tre codï¿½e en dur en production.
+# Elle doit ï¿½tre injectï¿½e via une variable d'environnement de votre hï¿½bergeur (Render).
 app.jwt-secret=${JWT_SECRET_KEY}
 app.jwt-expiration-milliseconds=86400000
 
 
-# 5. Logging (Optimisé pour la production)
+# 5. Logging (Optimisï¿½ pour la production)
 
-# Niveau de log 'INFO' ou 'WARN' pour réduire le volume de logs et ne garder que l'essentiel.
+# Niveau de log 'INFO' ou 'WARN' pour rï¿½duire le volume de logs et ne garder que l'essentiel.
 # C'est une bonne pratique pour ne pas saturer les logs.
 logging.level.com.hades.blog.filter=INFO
 logging.level.com.hades.blog.service.JwtService=INFO
@@ -61,5 +61,5 @@ logging.level.org.hibernate.SQL=WARN
 
 
 
-# Permet d'exposer les endpoints de santé pour la supervision.
+# Permet d'exposer les endpoints de santï¿½ pour la supervision.
 management.endpoints.web.exposure.include=health
