mise a jour dynamique

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -52,7 +52,7 @@ app.jwt-expiration-milliseconds=86400000
 
 # 5. Logging (Optimisï¿½ pour la production)
 
-# Niveau de log 'INFO' ou 'WARN' pour rï¿½duire le volume de logs et ne garder que l'essentiel.
+# Niveau de log 'INFO' ou 'WARN' pour reduire le volume de logs et ne garder que l'essentiel.
 # C'est une bonne pratique pour ne pas saturer les logs.
 logging.level.com.hades.blog.filter=INFO
 logging.level.com.hades.blog.service.JwtService=INFO
@@ -68,3 +68,11 @@ management.endpoints.web.exposure.include=health
 cloudinary.cloud_name=Root
 cloudinary.api_key=175955755157214
 cloudinary.api_secret=JEnPzDdmlJDv5pLQMJN-MZ44jn0
+
+
+# Pour avoir les erreurs Thymeleaf détaillées (avec lignes)
+logging.level.org.thymeleaf=TRACE
+logging.level.org.thymeleaf.templatemode=TRACE
+
+# Optionnel : désactive le cache Thymeleaf pour voir immédiatement les changements
+spring.thymeleaf.cache=false
