mise a jour dynamique

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -32,7 +32,7 @@ spring.datasource.hikari.connection-init-sql=SELECT 1
 # ATTENTION : 'update' est risquï¿½ en production !
 # Il est fortement recommandï¿½ d'utiliser 'none' ou 'validate' et de gï¿½rer les migrations
 # de base de donnï¿½es avec des outils comme Flyway ou Liquibase pour ï¿½viter les pertes de donnï¿½es.
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=uptade
 
 # Dï¿½sactive le formatage SQL et l'affichage des requï¿½tes pour des raisons de performance.
 spring.jpa.properties.hibernate.format_sql=false
@@ -70,9 +70,27 @@ cloudinary.api_key=175955755157214
 cloudinary.api_secret=JEnPzDdmlJDv5pLQMJN-MZ44jn0
 
 
-# Pour avoir les erreurs Thymeleaf détaillées (avec lignes)
+# Pour avoir les erreurs Thymeleaf dï¿½taillï¿½es (avec lignes)
 logging.level.org.thymeleaf=TRACE
 logging.level.org.thymeleaf.templatemode=TRACE
 
-# Optionnel : désactive le cache Thymeleaf pour voir immédiatement les changements
+# Optionnel : dï¿½sactive le cache Thymeleaf pour voir immï¿½diatement les changements
 spring.thymeleaf.cache=false
+
+
+# application.properties
+spring.mvc.converters.preferred-json-mapper=jackson
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+spring.jackson.default-property-inclusion=non_null
+spring.mvc.contentnegotiation.favor-parameter=false
+spring.mvc.contentnegotiation.favor-path-extension=false
+spring.mvc.contentnegotiation.media-types.json=application/json
+spring.mvc.contentnegotiation.default-content-type=application/json
+spring.jackson.serialization.fail-on-empty-beans=false
+spring.jackson.deserialization.fail-on-unknown-properties=false
+spring.jackson.date-format=yyyy-MM-dd
+spring.jackson.time-zone=UTC
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.force=true
+spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=false
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
