mise a jour dynamique

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,5 +48,5 @@ spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 
 logging.level.org.thymeleaf=DEBUG
 
-# S'assurer que le charset est bien configuré
+# S'assurer que le charset est bien configure
 server.servlet.encoding.enabled=true
