mise a jour dynamique2

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -32,4 +32,9 @@ spring.servlet.multipart.max-file-size=10MB
 # Taille maximale totale de la requï¿½te multipart (doit ï¿½tre >= max-file-size, par exemple, 10 Mo)
 spring.servlet.multipart.max-request-size=10MB
 
+#cloudina
+cloudinary.cloud_name=Root
+cloudinary.api_key=822931638535691
+cloudinary.api_secret=6zyFl5vn9iCoWNrrt4OMl_QEci0
+
 
