--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -53,8 +53,12 @@ management.endpoints.web.exposure.include=health
 
 #cloudina
 cloudinary.cloud_name=Root
-cloudinary.api_key=175955755157214
-cloudinary.api_secret=JEnPzDdmlJDv5pLQMJN-MZ44jn0
+cloudinary.api_key=822931638535691
+cloudinary.api_secret=6zyFl5vn9iCoWNrrt4OMl_QEci0
+
+# Taille maximale des fichiers
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 
 # Pour avoir les erreurs Thymeleaf detailles (avec lignes)
