--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=Paie1
 server.port= 8081
+
 # Configuration de la base de donnï¿½es MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/hades?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
@@ -28,6 +29,15 @@ file.upload-dir=C:/uploads/logos
 spring.servlet.multipart.max-file-size=10MB
 # Taille maximale totale de la requï¿½te multipart (doit ï¿½tre >= max-file-size, par exemple, 10 Mo)
 spring.servlet.multipart.max-request-size=10MB
+
+#cloudina
+cloudinary.cloud_name=Root
+cloudinary.api_key=822931638535691
+cloudinary.api_secret=6zyFl5vn9iCoWNrrt4OMl_QEci0
+
+
+
+
 
 # application.properties
 spring.mvc.converters.preferred-json-mapper=jackson
