mise a jour dynamique3

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -55,7 +55,7 @@ management.endpoints.web.exposure.include=health
 cloudinary.cloud_name=Root
 cloudinary.api_key=822931638535691
 cloudinary.api_secret=6zyFl5vn9iCoWNrrt4OMl_QEci0
-
+debug=true
 # Taille maximale des fichiers
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
