--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,7 +34,7 @@ spring.servlet.multipart.max-request-size=10MB
 cloudinary.cloud_name=Root
 cloudinary.api_key=822931638535691
 cloudinary.api_secret=6zyFl5vn9iCoWNrrt4OMl_QEci0
-
+debug=true
 
 
 
