mise a jour dynamique3

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -52,7 +52,7 @@ logging.level.org.hibernate.SQL=WARN
 management.endpoints.web.exposure.include=health
 
 #cloudina
-cloudinary.cloud_name=Root
+cloudinary.cloud_name=dfurjzy3b
 cloudinary.api_key=822931638535691
 cloudinary.api_secret=6zyFl5vn9iCoWNrrt4OMl_QEci0
 debug=true
