--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -33,7 +33,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 #cloudina
-cloudinary.cloud_name=Root
+cloudinary.cloud_name=dfurjzy3b
 cloudinary.api_key=822931638535691
 cloudinary.api_secret=6zyFl5vn9iCoWNrrt4OMl_QEci0
 
