--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -85,3 +85,9 @@ server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force=true
 spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=false
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+
+
+# Configuration Hibernate pour les LOB
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.jpa.properties.hibernate.connection.handling_mode=delayed_acquisition_and_release_after_transaction
