--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -22,7 +22,7 @@ spring.datasource.hikari.connection-init-sql=SELECT 1
 
 
 # 3. JPA / Hibernate
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto= create-drop
 
 # Desactive le formatage SQL et l'affichage des requetes pour des raisons de performance.
 spring.jpa.properties.hibernate.format_sql=false
