--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -91,3 +91,19 @@ spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.properties.hibernate.connection.handling_mode=delayed_acquisition_and_release_after_transaction
+
+
+
+# Configuration de l'envoi d'e-mails avec Gmail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=jackeboyeur244@gmail.com
+spring.mail.password=suwlzalbfgktexwk
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.test-connection=false
+
+app.frontend.password-reset-url=${FRONTEND_URL}
