--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,3 +60,20 @@ logging.level.org.thymeleaf=DEBUG
 
 # S'assurer que le charset est bien configure
 server.servlet.encoding.enabled=true
+
+
+# Configuration de l'envoi d'e-mails avec Gmail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=jackeboyeur244@gmail.com
+spring.mail.password=suwlzalbfgktexwk
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.test-connection=false
+
+
+app.frontend.password-reset-url=http://localhost:4200/reset-password
+
