feat & refractor      jai ajouter la fonctionnalite de envoie de log par email mais jai tout commente et il faut bien faire cote frontend et aussi jai modifier applicaiton.propetie pour ajouter le serveur messagerie

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -62,17 +62,35 @@ logging.level.org.thymeleaf=DEBUG
 server.servlet.encoding.enabled=true
 
 
-# Configuration de l'envoi d'e-mails avec Gmail
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=jackeboyeur244@gmail.com
-spring.mail.password=suwlzalbfgktexwk
+
+# Configuration de l'envoi d'e-mails avec serveur messagerie
+spring.mail.host=mail.ngombe.org
+spring.mail.port=465
+spring.mail.username=maalipo@ngombe.org
+spring.mail.password=qPuN3Yg@et2JE
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=*
 spring.mail.properties.mail.transport.protocol=smtp
-spring.mail.test-connection=false
+
+# Timeouts et sécurité
+spring.mail.properties.mail.smtp.connectiontimeout=10000
+spring.mail.properties.mail.smtp.timeout=10000
+spring.mail.properties.mail.smtp.writetimeout=10000
+spring.mail.properties.mail.smtp.ssl.checkserveridentity=false
+
+
+# Configuration de l'envoi d'e-mails avec Gmail
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=jackeboyeur244@gmail.com
+#spring.mail.password=suwlzalbfgktexwk
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.starttls.required=true
+#spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+#spring.mail.properties.mail.transport.protocol=smtp
+#spring.mail.test-connection=false
 
 
 app.frontend.password-reset-url=http://localhost:4200/reset-password
