--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -94,16 +94,20 @@ spring.jpa.properties.hibernate.connection.handling_mode=delayed_acquisition_and
 
 
 
-# Configuration de l'envoi d'e-mails avec Gmail
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=jackeboyeur244@gmail.com
-spring.mail.password=suwlzalbfgktexwk
+# Configuration de l'envoi d'e-mails avec serveur messagerie
+spring.mail.host=mail.ngombe.org
+spring.mail.port=465
+spring.mail.username=maalipo@ngombe.org
+spring.mail.password=votre_mot_de_passe_ici
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=mail.ngombe.org
 spring.mail.properties.mail.transport.protocol=smtp
-spring.mail.test-connection=false
+# Timeouts et sécurité
+spring.mail.properties.mail.smtp.connectiontimeout=10000
+spring.mail.properties.mail.smtp.timeout=10000
+spring.mail.properties.mail.smtp.writetimeout=10000
+#spring.mail.properties.mail.smtp.ssl.checkserveridentity=false
+
 
 app.frontend.password-reset-url=${FRONTEND_URL}
