refractory: jai remis envoie des log par email et aussi la recuperation des log manuellement

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -98,7 +98,7 @@ spring.jpa.properties.hibernate.connection.handling_mode=delayed_acquisition_and
 spring.mail.host=mail.ngombe.org
 spring.mail.port=465
 spring.mail.username=maalipo@ngombe.org
-spring.mail.password=votre_mot_de_passe_ici
+spring.mail.password=qPuN3Yg@et2JE
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=mail.ngombe.org
