--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -103,11 +103,11 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=mail.ngombe.org
 spring.mail.properties.mail.transport.protocol=smtp
-# Timeouts et sécurité
+# Timeouts et sï¿½curitï¿½
 spring.mail.properties.mail.smtp.connectiontimeout=10000
 spring.mail.properties.mail.smtp.timeout=10000
 spring.mail.properties.mail.smtp.writetimeout=10000
-#spring.mail.properties.mail.smtp.ssl.checkserveridentity=false
+
 
 
 app.frontend.password-reset-url=${FRONTEND_URL}
