feat & refractor   remit les fonctionnalite envoie log par email et recupere manuellement

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,6 @@ app.jwt-expiration-milliseconds=86400000
 logging.level.com.hades.blog.filter=DEBUG
 logging.level.com.hades.blog.
 
-
 #logo
 file.upload-dir=C:/uploads/logos
 # Taille maximale des fichiers individuels (par exemple, 10 Mo)
@@ -35,7 +34,6 @@ cloudinary.cloud_name=dfurjzy3b
 cloudinary.api_key=822931638535691
 cloudinary.api_secret=6zyFl5vn9iCoWNrrt4OMl_QEci0
 debug=true
-
 
 
 
@@ -55,7 +53,6 @@ server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force=true
 spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=false
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
-
 logging.level.org.thymeleaf=DEBUG
 
 # S'assurer que le charset est bien configure
@@ -73,7 +70,7 @@ spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=*
 spring.mail.properties.mail.transport.protocol=smtp
 
-# Timeouts et sécurité
+# Timeouts et sï¿½curitï¿½
 spring.mail.properties.mail.smtp.connectiontimeout=10000
 spring.mail.properties.mail.smtp.timeout=10000
 spring.mail.properties.mail.smtp.writetimeout=10000
