refractor: jai modifier le template par defaut et aussi ameliorer l'ajout des avance salaire

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=Maapilo
+spring.application.name=Maalipo
 server.port= 8081
 
 # Configuration de la base de donnï¿½es MySQL
