modifucation de application propertie  base de donne

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -12,9 +12,9 @@ server.address=0.0.0.0
 
 
 # Votre configuration actuelle est valide pour Render, mais expose les identifiants dans le code source.
-spring.datasource.url=jdbc:postgresql://dpg-d1qc4rbuibrs73eigpag-a.oregon-postgres.render.com:5432/hades_kkvc?sslmode=require
-spring.datasource.username=hades_kkvc_user
-spring.datasource.password=OIy6rIrFGhqpNJxifa1u4Xh5TXtLLWtd
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configuration SSL specifique Render pour eviter les erreurs de connexion.
