modification de application propertie  base de donne

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ logging.level.com.hades.blog.
 #logo
 file.upload-dir=C:/uploads/logos
 
-# configuration pour les documents de congé
+# configuration pour les documents de congï¿½
 app.storage.documents=C:/uploads/documents
 # Taille maximale des fichiers individuels (par exemple, 10 Mo)
 spring.servlet.multipart.max-file-size=10MB
