resolve errer de parsing de email.html

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -108,5 +108,12 @@ app.mail.from-name=Systeme Maalipo
 
 app.frontend.password-reset-url=http://localhost:4200/reset-password
 
+#configuration thymeleaf
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.servlet.content-type=text/html
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
 
 
