--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -66,7 +66,13 @@ logging.level.org.thymeleaf=TRACE
 logging.level.org.thymeleaf.templatemode=TRACE
 
 # Optionnel : desactive le cache Thymeleaf pour voir immediatement les changements
+#configuration thymeleaf
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.servlet.content-type=text/html
 spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
 
 
 # application.properties
@@ -122,6 +128,9 @@ spring.mail.properties.mail.smtp.helo=maalipo.ngombe.org
 # NOUVEAU : Configuration du domaine d'envoi
 app.mail.domain=ngombe.org
 app.mail.from-name=Systeme Maalipo
+
+
+
 
 
 app.frontend.password-reset-url=${FRONTEND_URL}
