--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Maalipo
-server.port=8081
+server.port= 8081
 
 # Configuration de la base de donnees MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/hades?useSSL=false&serverTimezone=UTC
@@ -8,7 +8,7 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto= update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
@@ -20,24 +20,27 @@ app.jwt-expiration-milliseconds=86400000
 
 # Logging
 logging.level.com.hades.blog.filter=DEBUG
-logging.level.org.thymeleaf=DEBUG
+logging.level.com.hades.blog.
 
-# Logo et documents
+#logo
 file.upload-dir=C:/uploads/logos
-app.storage.documents=C:/uploads/documents
 
-# Taille maximale des fichiers individuels
+# configuration pour les documents de conge
+app.storage.documents=C:/uploads/documents
+# Taille maximale des fichiers individuels (par exemple, 10 Mo)
 spring.servlet.multipart.max-file-size=10MB
-# Taille maximale totale de la requete multipart
+# Taille maximale totale
 spring.servlet.multipart.max-request-size=10MB
 
-# Cloudinary
+#cloudinary
 cloudinary.cloud_name=dfurjzy3b
 cloudinary.api_key=822931638535691
 cloudinary.api_secret=6zyFl5vn9iCoWNrrt4OMl_QEci0
 debug=true
 
-# Jackson Configuration
+
+
+# application.properties
 spring.mvc.converters.preferred-json-mapper=jackson
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.jackson.default-property-inclusion=non_null
@@ -45,16 +48,20 @@ spring.mvc.contentnegotiation.favor-parameter=false
 spring.mvc.contentnegotiation.favor-path-extension=false
 spring.mvc.contentnegotiation.media-types.json=application/json
 spring.mvc.contentnegotiation.default-content-type=application/json
+spring.jackson.serialization.fail-on-empty-beans=false
 spring.jackson.deserialization.fail-on-unknown-properties=false
 spring.jackson.date-format=yyyy-MM-dd
 spring.jackson.time-zone=UTC
-spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=false
-spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
-
-# Configuration de l'encodage
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force=true
+spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=false
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+logging.level.org.thymeleaf=DEBUG
+
+# S'assurer que le charset est bien configure
 server.servlet.encoding.enabled=true
+
+
 
 # Configuration de l'envoi d'e-mails avec serveur messagerie
 spring.mail.host=mail.ngombe.org
@@ -72,29 +79,6 @@ spring.mail.properties.mail.smtp.timeout=10000
 spring.mail.properties.mail.smtp.writetimeout=10000
 spring.mail.properties.mail.smtp.ssl.checkserveridentity=false
 
-# Configuration anti-spam
-spring.mail.properties.mail.smtp.starttls.enable=false
-spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
-spring.mail.properties.mail.smtp.ssl.ciphersuites=TLS_RSA_WITH_AES_128_CBC_SHA,TLS_RSA_WITH_AES_256_CBC_SHA
-
-# Headers anti-spam
-spring.mail.properties.mail.smtp.ehlo=true
-spring.mail.properties.mail.smtp.helo=maalipo.ngombe.org
-
-# Configuration du domaine d'envoi
-app.mail.domain=ngombe.org
-app.mail.from-name=Systeme Maalipo
-
-# URL de reinitialisation mot de passe
-app.frontend.password-reset-url=http://localhost:4200/reset-password
-
-# Configuration Thymeleaf
-spring.thymeleaf.mode=HTML
-spring.thymeleaf.encoding=UTF-8
-spring.thymeleaf.servlet.content-type=text/html; charset=UTF-8
-spring.thymeleaf.cache=false
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
 
 # Configuration de l'envoi d'e-mails avec Gmail
 #spring.mail.host=smtp.gmail.com
@@ -107,3 +91,9 @@ spring.thymeleaf.suffix=.html
 #spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 #spring.mail.properties.mail.transport.protocol=smtp
 #spring.mail.test-connection=false
+
+
+app.frontend.password-reset-url=http://localhost:4200/reset-password
+
+
+
