feat(config,notif): adapte la config Hostinger et améliore notifications
- Ajoute et met à jour application-hostinger.properties pour l’hébergement
- Modifie .gitignore, docker-compose.yml et supprime .env pour la sécurité et la portabilité
- Améliore la sécurité (SecurityConfig) et la gestion des emails/notifications (services concernés)
- Met à jour les templates d’email et la configuration de développement         -jai mit les systeme de gestion des congés et envoie notifiction complet

Ce commit prépare le projet pour un déploiement sur Hostinger et renforce la gestion des notifications et de la sécurité.

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
-spring.application.name=Paie1
-spring.profiles.active=dev
+spring.application.name=Maalipo
+
 server.port= 8081
 # Configuration de la base de donnï¿½es MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/hades?useSSL=false&serverTimezone=UTC
