feat: Améliore la sécurité et la gestion des notifications de congé
- Met à jour SecurityConfig pour renforcer la configuration de sécurité.
- Modifie NotificationCongeService pour améliorer la gestion des notifications de congé.
- Met à jour application-prod.properties avec de nouveaux paramètres liés à la sécurité et aux notifications.

Ces changements visent à renforcer la sécurité de l’application et à optimiser la gestion des notifications pour les demandes de congé.

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -95,14 +95,25 @@ spring.jpa.properties.hibernate.connection.handling_mode=delayed_acquisition_and
 
 
 # Configuration de l'envoi d'e-mails avec serveur messagerie
-spring.mail.host=mail.ngombe.org
-spring.mail.port=465
-spring.mail.username=maalipo@ngombe.org
-spring.mail.password=qPuN3Yg@et2JE
+#spring.mail.host=mail.ngombe.org
+#spring.mail.port=465
+#spring.mail.username=maalipo@ngombe.org
+#spring.mail.password=qPuN3Yg@et2JE
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.ssl.enable=true
+#spring.mail.properties.mail.smtp.ssl.trust=mail.ngombe.org
+#spring.mail.properties.mail.transport.protocol=smtp
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=jackeboyeur244@gmail.com
+spring.mail.password=suwlzalbfgktexwk
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.ssl.enable=true
-spring.mail.properties.mail.smtp.ssl.trust=mail.ngombe.org
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.test-connection=false
 
 # Timeouts et securite
 spring.mail.properties.mail.smtp.connectiontimeout=10000
