--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -105,16 +105,14 @@ spring.jpa.properties.hibernate.connection.handling_mode=delayed_acquisition_and
 #spring.mail.properties.mail.transport.protocol=smtp
 
 spring.mail.host=smtp.gmail.com
-spring.mail.port=587
+spring.mail.port=465
 spring.mail.username=jackeboyeur244@gmail.com
 spring.mail.password=suwlzalbfgktexwk
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
+# IMPORTANT : Active SSL et désactive STARTTLS pour le port 465
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.starttls.enable=false
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
-spring.mail.properties.mail.transport.protocol=smtp
-spring.mail.test-connection=false
-
 # Timeouts et securite
 spring.mail.properties.mail.smtp.connectiontimeout=10000
 spring.mail.properties.mail.smtp.timeout=10000
