--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -95,24 +95,15 @@ spring.jpa.properties.hibernate.connection.handling_mode=delayed_acquisition_and
 
 
 # Configuration de l'envoi d'e-mails avec serveur messagerie
-#spring.mail.host=mail.ngombe.org
-#spring.mail.port=465
-#spring.mail.username=maalipo@ngombe.org
-#spring.mail.password=qPuN3Yg@et2JE
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.ssl.enable=true
-#spring.mail.properties.mail.smtp.ssl.trust=mail.ngombe.org
-#spring.mail.properties.mail.transport.protocol=smtp
-
-spring.mail.host=smtp.gmail.com
+spring.mail.host=mail.ngombe.org
 spring.mail.port=465
-spring.mail.username=jackeboyeur244@gmail.com
-spring.mail.password=suwlzalbfgktexwk
+spring.mail.username=maalipo@ngombe.org
+spring.mail.password=qPuN3Yg@et2JE
 spring.mail.properties.mail.smtp.auth=true
-# IMPORTANT : Active SSL et désactive STARTTLS pour le port 465
 spring.mail.properties.mail.smtp.ssl.enable=true
-spring.mail.properties.mail.smtp.starttls.enable=false
-spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.smtp.ssl.trust=mail.ngombe.org
+spring.mail.properties.mail.transport.protocol=smtp
+
 # Timeouts et securite
 spring.mail.properties.mail.smtp.connectiontimeout=10000
 spring.mail.properties.mail.smtp.timeout=10000
